--- a/orderlist/package.json
+++ b/orderlist/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "firebase": "^3.4.1",
     "react": "15.3.2",
-    "react-native": "0.34.1"
+    "react-native": "0.34.1",
+    "react-native-popup": "^0.5.2"
   }
 }
